--- a/TestHotkeys/TestHotkeys/TestHotkeys.csproj
+++ b/TestHotkeys/TestHotkeys/TestHotkeys.csproj
@@ -33,6 +33,10 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="NonInvasiveKeyboardHookLibrary, Version=1.2.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\packages\NonInvasiveKeyboardHookLibrary.2.1.0\lib\net452\NonInvasiveKeyboardHookLibrary.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="PresentationCore" />
         <Reference Include="System" />
         <Reference Include="System.Core" />
@@ -66,6 +70,7 @@
             <AutoGen>True</AutoGen>
             <DependentUpon>Resources.resx</DependentUpon>
         </Compile>
+        <None Include="packages.config" />
         <None Include="Properties\Settings.settings">
             <Generator>SettingsSingleFileGenerator</Generator>
             <LastGenOutput>Settings.Designer.cs</LastGenOutput>
