--- a/TestHotkeys/TestHotkeys/TestHotkeys.csproj
+++ b/TestHotkeys/TestHotkeys/TestHotkeys.csproj
@@ -50,9 +50,12 @@
         <Reference Include="System.Net.Http" />
         <Reference Include="System.Windows.Forms" />
         <Reference Include="System.Xml" />
+        <Reference Include="UIAutomationClient" />
+        <Reference Include="UIAutomationTypes" />
         <Reference Include="WindowsBase" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="AutomationExamples.cs" />
         <Compile Include="Form1.cs">
             <SubType>Form</SubType>
         </Compile>
