Moved UI stuff to its own module.

--- a/Wautoma/Wautoma/Wautoma.fsproj
+++ b/Wautoma/Wautoma/Wautoma.fsproj
@@ -10,6 +10,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Compile Include="UIStuff.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
