--- a/Wautoma/Wautoma/Wautoma.fsproj
+++ b/Wautoma/Wautoma/Wautoma.fsproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
         <Compile Include="UIStuff.fs" />
+        <Compile Include="KeysTypes.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
