--- a/Wautoma/Wautoma/Wautoma.fsproj
+++ b/Wautoma/Wautoma/Wautoma.fsproj
@@ -10,9 +10,12 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Compile Include="NativeApi.fs" />
         <Compile Include="UIStuff.fs" />
         <Compile Include="KeysTypes.fs" />
+        <Compile Include="KeyboardHandling.fs" />
         <Compile Include="Program.fs" />
+        <Content Include=".fantomasignore" />
     </ItemGroup>
 
 </Project>
