Implement IDisposable pattern for KeyboardHandler.

--- a/Wautoma/Wautoma/Wautoma.fsproj
+++ b/Wautoma/Wautoma/Wautoma.fsproj
@@ -10,10 +10,11 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Compile Include="Logging.fs" />
         <Compile Include="NativeApi.fs" />
-        <Compile Include="UIStuff.fs" />
         <Compile Include="KeysTypes.fs" />
         <Compile Include="KeyboardHandling.fs" />
+        <Compile Include="UIStuff.fs" />
         <Compile Include="Program.fs" />
         <Content Include=".fantomasignore" />
     </ItemGroup>
