Continued working on porting keyboardHooFunc from C#.

--- a/Wautoma/Wautoma/Wautoma.fsproj
+++ b/Wautoma/Wautoma/Wautoma.fsproj
@@ -18,6 +18,7 @@
         <Compile Include="Program.fs" />
         <Content Include=".fantomasignore" />
         <Content Include="sample.ico" />
+        <Compile Include="KeysNames.fs" />
     </ItemGroup>
 
 </Project>
