--- a/Wautoma/Wautoma/Wautoma.fsproj
+++ b/Wautoma/Wautoma/Wautoma.fsproj
@@ -21,4 +21,8 @@
         <Content Include="sample.ico" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Update="FSharp.Core" Version="5.0.2" />
+    </ItemGroup>
+
 </Project>
