--- a/Wautoma/Wautoma.Tests/Wautoma.Tests.fsproj
+++ b/Wautoma/Wautoma.Tests/Wautoma.Tests.fsproj
@@ -19,6 +19,7 @@
       <PackageReference Include="FsCheck.Xunit" Version="2.16.3" />
       <PackageReference Include="FsUnit.xUnit" Version="4.0.6" />
       <PackageReference Include="Unquote" Version="6.1.0" />
+      <PackageReference Update="FSharp.Core" Version="5.0.2" />
     </ItemGroup>
 
 </Project>
