Tested moveToGmail() function and it works just fine when not in the context of the app.

--- a/Wautoma/Wautoma.Tests/Wautoma.Tests.fsproj
+++ b/Wautoma/Wautoma.Tests/Wautoma.Tests.fsproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <Compile Include="Keyboard shortcuts parsing.fs" />
+        <Compile Include="UI automation.fs" />
     </ItemGroup>
 
     <ItemGroup>
