--- a/Wautoma/Wautoma/Wautoma.fsproj
+++ b/Wautoma/Wautoma/Wautoma.fsproj
@@ -6,26 +6,27 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Reference Include="System.Windows.Forms"/>
-        <Reference Include="UIAutomationClient"/>
-        <Reference Include="UIAutomationTypes"/>
+        <Reference Include="System.Windows.Forms" />
+        <Reference Include="UIAutomationClient" />
+        <Reference Include="UIAutomationTypes" />
     </ItemGroup>
 
     <ItemGroup>
-        <Compile Include="Logging.fs"/>
-        <Compile Include="NativeApi.fs"/>
-        <Compile Include="KeysNames.fs"/>
-        <Compile Include="KeysTypes.fs"/>
-        <Compile Include="UIAutomation\AutomationExamples.fs"/>
-        <Compile Include="KeyboardHandling.fs"/>
-        <Compile Include="UIStuff.fs"/>
-        <Compile Include="Program.fs"/>
-        <Content Include=".fantomasignore"/>
-        <Content Include="sample.ico"/>
+        <Compile Include="Logging.fs" />
+        <Compile Include="Async.fs" />
+        <Compile Include="NativeApi.fs" />
+        <Compile Include="KeysNames.fs" />
+        <Compile Include="KeysTypes.fs" />
+        <Compile Include="UIAutomation\AutomationExamples.fs" />
+        <Compile Include="KeyboardHandling.fs" />
+        <Compile Include="UIStuff.fs" />
+        <Compile Include="Program.fs" />
+        <Content Include=".fantomasignore" />
+        <Content Include="sample.ico" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Update="FSharp.Core" Version="5.0.2"/>
+        <PackageReference Update="FSharp.Core" Version="5.0.2" />
     </ItemGroup>
 
 </Project>
