Implemented a simple settings perisistence API.

--- a/Wautoma/Wautoma.Tests/Wautoma.Tests.fsproj
+++ b/Wautoma/Wautoma.Tests/Wautoma.Tests.fsproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <Compile Include="Keyboard shortcuts parsing.fs" />
         <Compile Include="UI automation.fs" />
+        <Compile Include="Working with settings.fs" />
     </ItemGroup>
 
     <ItemGroup>
