Trying to make FAKE script run XUnit tests, but it looks like its support is outdated. I'm going to stick to dotnet CLI for now.

--- a/Wautoma/Wautoma.Tests/Wautoma.Tests.fsproj
+++ b/Wautoma/Wautoma.Tests/Wautoma.Tests.fsproj
@@ -22,6 +22,14 @@
       <PackageReference Include="FsUnit.xUnit" Version="4.0.6" />
       <PackageReference Include="Unquote" Version="6.1.0" />
       <PackageReference Update="FSharp.Core" Version="5.0.2" />
+      <PackageReference Include="xunit.runner.console" Version="2.4.1">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
 
 </Project>
