--- a/Wautoma/Wautoma/Wautoma.fsproj
+++ b/Wautoma/Wautoma/Wautoma.fsproj
@@ -3,33 +3,36 @@
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
         <TargetFramework>net48</TargetFramework>
+        <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
     </PropertyGroup>
 
     <ItemGroup>
-        <Reference Include="System.Windows.Forms" />
-        <Reference Include="UIAutomationClient" />
-        <Reference Include="UIAutomationTypes" />
+        <Reference Include="System.Windows.Forms"/>
+        <Reference Include="UIAutomationClient"/>
+        <Reference Include="UIAutomationTypes"/>
     </ItemGroup>
 
     <ItemGroup>
-        <Compile Include="Logging.fs" />
-        <Compile Include="Async.fs" />
-        <Compile Include="Settings.fs" />
-        <Compile Include="NativeApi.fs" />
-        <Compile Include="KeysNames.fs" />
-        <Compile Include="KeysTypes.fs" />
-        <Compile Include="UIAutomation\AutomationExamples.fs" />
-        <Compile Include="KeyboardHandling.fs" />
-        <Compile Include="UIStuff.fs" />
-        <Compile Include="Program.fs" />
-        <Content Include=".fantomasignore" />
-        <Content Include="icon.ico" />
-        <Content Include="icon.pdn" />
+        <Compile Include="Logging.fs"/>
+        <Compile Include="Async.fs"/>
+        <Compile Include="Settings.fs"/>
+        <Compile Include="NativeApi.fs"/>
+        <Compile Include="KeysNames.fs"/>
+        <Compile Include="KeysTypes.fs"/>
+        <Compile Include="UIAutomation\AutomationExamples.fs"/>
+        <Compile Include="KeyboardHandling.fs"/>
+        <Compile Include="UIStuff.fs"/>
+        <Compile Include="Program.fs"/>
+        <Content Include=".fantomasignore"/>
+        <Content Include="icon.ico">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        <Content Include="icon.pdn"/>
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Update="FSharp.Core" Version="5.0.2" />
-        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+        <PackageReference Update="FSharp.Core" Version="5.0.2"/>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
     </ItemGroup>
 
 </Project>
