--- a/Wautoma/Wautoma/Wautoma.fsproj
+++ b/Wautoma/Wautoma/Wautoma.fsproj
@@ -21,7 +21,9 @@
         <Compile Include="KeysNames.fs" />
         <Compile Include="KeysTypes.fs" />
         <Compile Include="UIAutomation\Processes.fs" />
-        <Compile Include="UIAutomation\AutomationExamples.fs" />
+        <Compile Include="UIAutomation\Windows.fs" />
+        <Compile Include="UIAutomation\Misc.fs" />
+        <Compile Include="UIAutomation\Mouse.fs" />
         <Compile Include="KeyboardHandling.fs" />
         <Compile Include="UIStuff.fs" />
         <Compile Include="MyHotkeys.fs" />
