--- a/Wautoma/Wautoma.Tests/Wautoma.Tests.fsproj
+++ b/Wautoma/Wautoma.Tests/Wautoma.Tests.fsproj
@@ -8,21 +8,22 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Keyboard shortcuts parsing.fs"/>
-        <Compile Include="UI automation.fs"/>
-        <Compile Include="Working with settings.fs"/>
+        <Compile Include="Keyboard shortcuts parsing.fs" />
+        <Compile Include="UI automation.fs" />
+        <Compile Include="Working with settings.fs" />
+        <Compile Include="Virtual desktops exploratory tests.fs" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Wautoma\Wautoma.fsproj"/>
+        <ProjectReference Include="..\Wautoma\Wautoma.fsproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="FsCheck" Version="2.16.3"/>
-        <PackageReference Include="FsCheck.Xunit" Version="2.16.3"/>
-        <PackageReference Include="FsUnit.xUnit" Version="4.0.6"/>
-        <PackageReference Include="Unquote" Version="6.1.0"/>
-        <PackageReference Update="FSharp.Core" Version="5.0.2"/>
+        <PackageReference Include="FsCheck" Version="2.16.3" />
+        <PackageReference Include="FsCheck.Xunit" Version="2.16.3" />
+        <PackageReference Include="FsUnit.xUnit" Version="4.0.6" />
+        <PackageReference Include="Unquote" Version="6.1.0" />
+        <PackageReference Update="FSharp.Core" Version="5.0.2" />
         <PackageReference Include="xunit.runner.console" Version="2.4.1">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
