--- a/Wautoma/Wautoma/Wautoma.fsproj
+++ b/Wautoma/Wautoma/Wautoma.fsproj
@@ -18,6 +18,7 @@
         <Compile Include="Async.fs" />
         <Compile Include="Settings.fs" />
         <Compile Include="NativeApi.fs" />
+        <Compile Include="VirtualDesktops.fs" />
         <Compile Include="KeysNames.fs" />
         <Compile Include="KeysTypes.fs" />
         <Compile Include="UIAutomation\Processes.fs" />
