--- a/Wautoma/Wautoma/Wautoma.fsproj
+++ b/Wautoma/Wautoma/Wautoma.fsproj
@@ -11,6 +11,7 @@
         <Reference Include="System.Windows.Forms" />
         <Reference Include="UIAutomationClient" />
         <Reference Include="UIAutomationTypes" />
+        <Reference Include="WindowsBase" />
     </ItemGroup>
 
     <ItemGroup>
