Additional pauses when switching desktops, I'm not sure if they help. Added VersionHistory.txt.

--- a/Wautoma/Wautoma/Wautoma.fsproj
+++ b/Wautoma/Wautoma/Wautoma.fsproj
@@ -36,6 +36,7 @@
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
         <Content Include="icon.pdn" />
+        <Content Include="VersionHistory.txt" />
         <None Include="App.config" />
     </ItemGroup>
 
