Working on properly simulating key presses. Imported some 3rd party code as an experiment.

--- a/Wautoma/Wautoma.Tests/Wautoma.Tests.fsproj
+++ b/Wautoma/Wautoma.Tests/Wautoma.Tests.fsproj
@@ -12,6 +12,7 @@
         <Compile Include="UI automation.fs" />
         <Compile Include="Working with settings.fs" />
         <Compile Include="Virtual desktops exploratory tests.fs" />
+        <Compile Include="Keyboard shortcuts to SendKeys string.fs" />
     </ItemGroup>
 
     <ItemGroup>
